# fpl_agent

./: README.md  experimental.ipynb  hello.py  pyproject.toml
.github/workflows/: python-app.yml
fpl_agent/backend/agent/: data_formatter.py  llm_manager.py  sql_agent.py
fpl_agent/backend/agent/prompts/: instructions.xml  schema_context.xml  sql_base.xml  sql_error.xml
fpl_agent/backend/db/: database_manager.py
fpl_agent/db/: database_manager.py
fpl_agent/frontend/: st_app.py
src/: fpl_agent.py  st_app.py
tests/: test_database_manager.py
