[project]
name = "fpl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.3",
    "mypy>=1.14.1",
    "openai>=1.59.3",
    "pre-commit>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
    "sqlacodegen>=2.3.0",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "types-psycopg2>=2.9.21.20241019",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
extend-select = ["C4", "TCH", "SIM"]
show-fixes = true
